# rl-asteroids-pygame

./: .gitignore  ALE_ACTIONS_IMPLEMENTATION.md  DQN_IMPLEMENTATION.md  README.md  ROADMAP.md  TODO.md  asteroids_dqn_training.py  asteroids_env.py  asteroids_game.py  beamrider_dqn_training.py  generate_dqn_buffer.py  main.py  mock_model.py  parse_training_log.py  plan.md  play_asteroids_human.py  play_atari_human.py  play_beamrider_human.py  play_beamrider_model.py  play_dqn_model.py  play_py_asteroids_human.py  play_with_human.py  play_with_model.py  pretrain_dqn_curl.py  pyproject.toml  run_gen_buffer.sh  test_env.py  test_obs.py  test_trained_model.py  train_dqn.py
asteroids/: __init__.py  game.py  gym_env.py
asteroids/entities/: asteroid.py  asteroidfield.py  constants.py  game_configs.py  player.py  shot.py
asteroids_core/: __init__.py  circleshape.py
demos/: __init__.py  play_basic_ai.py  play_human.py  play_torch_ai.py
docs/: DEVELOPMENT_HISTORY.md  DQN_IMPLEMENTATION.md  DQN_IMPLEMENTATION_TIMELINE.md  ENHANCED_LOGGING.md  GAME_VERSIONING.md  MODEL_CONFIG_PLAN.md
game/: __init__.py  asteroids_env.py
models/: __init__.py  base_model.py  torch_model.py
shared/: __init__.py  distributional_utils.py  environments.py  experience.py  exploration_metrics.py  model_config.py  model_factory.py  models.py  noisy_networks.py  prioritized_experience.py  utils.py  wrappers.py
tests/: __init__.py  test_observations.py
training/: __init__.py  utils.py
