[project]
name = "asteroids-ai"
version = "0.1.0"
description = "Asteroids game with Gymnasium environment for RL training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "asteroid>=0.7.0",
    "gymnasium>=1.2.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "moviepy>=2.2.1",
    "notebook>=7.4.5",
    "opencv-python>=4.12.0.88",
    "pygame>=2.6.1",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
